--- a/index.html
+++ b/index.html
@@ -12,10 +12,51 @@
   <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
+
+div {
+  width: 275px;
+  height: 200px;
+  background: hsl(145, 58%, 55%);
+  margin: 0 auto;
+  position: relative;
+  border-radius: 20px 20px 0 0;
+  z-index: 2;
+}
+
+div::before {
+  content: '';
+  width: 275px;
+  height: 200px;
+  position: absolute;
+  top: 45px;
+  background: hsl(223, 47%, 23%);
+  border-radius: 20px;
+  z-index: 1;
+}
+
+#img {
+  position: relative;
+  top: 0;
+  right: 0;
+  overflow: hidden;
+}
+
+#img img {
+  position: absolute;
+  top: -1%;
+  right: 5%;
+}
+
   </style>
 </head>
 <body>
 
+
+  <div>
+    <div id="img">
+      <img src="./images/icon-exercise.svg" alt="">
+    </div> 
+  </div>
   Report for
   Jeremy Robson
 
@@ -70,11 +111,11 @@
   Previous - 2hrs <!-- weekly -->
   7hrs <!-- monthly -->
   Previous - 11hrs <!-- monthly -->
-
+<!-- 
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
-  </div>
+  </div> -->
 </body>
 </html>
