--- a/index.html
+++ b/index.html
@@ -8,114 +8,99 @@
   
   <title>Frontend Mentor | Time tracking dashboard</title>
 
+  <link rel="stylesheet" href="./style.css">
+
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-
-div {
-  width: 275px;
-  height: 200px;
-  background: hsl(145, 58%, 55%);
-  margin: 0 auto;
-  position: relative;
-  border-radius: 20px 20px 0 0;
-  z-index: 2;
-}
-
-div::before {
-  content: '';
-  width: 275px;
-  height: 200px;
-  position: absolute;
-  top: 45px;
-  background: hsl(223, 47%, 23%);
-  border-radius: 20px;
-  z-index: 1;
-}
-
-#img {
-  position: relative;
-  top: 0;
-  right: 0;
-  overflow: hidden;
-}
-
-#img img {
-  position: absolute;
-  top: -1%;
-  right: 5%;
-}
-
-  </style>
 </head>
 <body>
+  <div class="container">
 
+    <div class="profile-card">
+      <div class="header">
+          <div class="profile-pic">
+            <img src="./images/image-jeremy.png" alt="">
+          </div>    
+          <p>Report for</p>
+          <h1>Jeremy <br>Robson</h1>
+      </div>
+      <ul class="menu">
+        <li><a href="">Daily</a></li>
+        <li><a href="">Weekly</a></li>
+        <li><a href="">Monthly</a></li>
+      </ul>
+    </div>
 
-  <div>
-    <div id="img">
-      <img src="./images/icon-exercise.svg" alt="">
-    </div> 
+    <div class="card-container">
+      <div class="card" id="card-work">
+        <div class="img">
+          <img src="./images/icon-work.svg" alt="">
+        </div>
+        <div class="card-body">
+          <div class="flex flex-between"><div class="card-title">Work</div><img src="./images/icon-ellipsis.svg" alt=""></div>
+          <h1 class="card-time">32hrs</h1>
+          <p class="card-desc">Last Week - 36hrs</p>
+        </div>
+      </div>
+
+      <div class="card" id="card-work">
+        <div class="img">
+          <img src="./images/icon-work.svg" alt="">
+        </div>
+        <div class="card-body">
+          <div class="flex flex-between"><div class="card-title">Work</div><img src="./images/icon-ellipsis.svg" alt=""></div>
+          <h1 class="card-time">32hrs</h1>
+          <p class="card-desc">Last Week - 36hrs</p>
+        </div>
+      </div>
+
+      <div class="card" id="card-work">
+        <div class="img">
+          <img src="./images/icon-work.svg" alt="">
+        </div>
+        <div class="card-body">
+          <div class="flex flex-between"><div class="card-title">Work</div><img src="./images/icon-ellipsis.svg" alt=""></div>
+          <h1 class="card-time">32hrs</h1>
+          <p class="card-desc">Last Week - 36hrs</p>
+        </div>
+      </div>
+
+      <div class="card" id="card-work">
+        <div class="img">
+          <img src="./images/icon-work.svg" alt="">
+        </div>
+        <div class="card-body">
+          <div class="flex flex-between"><div class="card-title">Work</div><img src="./images/icon-ellipsis.svg" alt=""></div>
+          <h1 class="card-time">32hrs</h1>
+          <p class="card-desc">Last Week - 36hrs</p>
+        </div>
+      </div>
+
+      <div class="card" id="card-work">
+        <div class="img">
+          <img src="./images/icon-work.svg" alt="">
+        </div>
+        <div class="card-body">
+          <div class="flex flex-between"><div class="card-title">Work</div><img src="./images/icon-ellipsis.svg" alt=""></div>
+          <h1 class="card-time">32hrs</h1>
+          <p class="card-desc">Last Week - 36hrs</p>
+        </div>
+      </div>
+
+      <div class="card" id="card-work">
+        <div class="img">
+          <img src="./images/icon-work.svg" alt="">
+        </div>
+        <div class="card-body">
+          <div class="flex flex-between"><div class="card-title">Work</div><img src="./images/icon-ellipsis.svg" alt=""></div>
+          <h1 class="card-time">32hrs</h1>
+          <p class="card-desc">Last Week - 36hrs</p>
+        </div>
+      </div>
+
+    </div>
+
   </div>
-  Report for
-  Jeremy Robson
 
-  Daily
-  Weekly
-  Monthly
-
-  Work
-  5hrs <!-- daily -->
-  Previous - 7hrs <!-- daily -->
-  32hrs <!-- weekly -->
-  Previous - 36hrs <!-- weekly -->
-  103hrs <!-- monthly -->
-  Previous - 128hrs <!-- monthly -->
-
-  Play
-  1hr <!-- daily -->
-  Previous - 2hrs <!-- daily -->
-  10hrs <!-- weekly -->
-  Previous - 8hrs <!-- weekly -->
-  23hrs <!-- monthly -->
-  Previous - 29hrs <!-- monthly -->
-
-  Study
-  0hrs <!-- daily -->
-  Previous - 1hr <!-- daily -->
-  4hrs <!-- weekly -->
-  Previous - 7hrs <!-- weekly -->
-  13hrs <!-- monthly -->
-  Previous - 19hrs <!-- monthly -->
-
-  Exercise
-  1hr <!-- daily -->
-  Previous - 1hr <!-- daily -->
-  4hrs <!-- weekly -->
-  Previous - 5hrs <!-- weekly -->
-  11hrs <!-- monthly -->
-  Previous - 18hrs <!-- monthly -->
-
-  Social
-  1hr <!-- daily -->
-  Previous - 3hrs <!-- daily -->
-  5hrs <!-- weekly -->
-  Previous - 10hrs <!-- weekly -->
-  21hrs <!-- monthly -->
-  Previous - 23hrs <!-- monthly -->
-
-  Self Care
-  0hrs <!-- daily -->
-  Previous - 1hr <!-- daily -->
-  2hrs <!-- weekly -->
-  Previous - 2hrs <!-- weekly -->
-  7hrs <!-- monthly -->
-  Previous - 11hrs <!-- monthly -->
-<!-- 
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div> -->
+  </body>
 </body>
 </html>
