--- a/index.html
+++ b/index.html
@@ -36,71 +36,14 @@
           <img src="./images/icon-work.svg" alt="">
         </div>
         <div class="card-body">
-          <div class="flex flex-between"><div class="card-title">Work</div><img src="./images/icon-ellipsis.svg" alt=""></div>
+          <div class="flex flex-between card-header"><div class="card-title">Work</div><img src="./images/icon-ellipsis.svg" alt=""></div>
           <h1 class="card-time">32hrs</h1>
           <p class="card-desc">Last Week - 36hrs</p>
         </div>
       </div>
-
-      <div class="card" id="card-work">
-        <div class="img">
-          <img src="./images/icon-work.svg" alt="">
-        </div>
-        <div class="card-body">
-          <div class="flex flex-between"><div class="card-title">Work</div><img src="./images/icon-ellipsis.svg" alt=""></div>
-          <h1 class="card-time">32hrs</h1>
-          <p class="card-desc">Last Week - 36hrs</p>
-        </div>
-      </div>
-
-      <div class="card" id="card-work">
-        <div class="img">
-          <img src="./images/icon-work.svg" alt="">
-        </div>
-        <div class="card-body">
-          <div class="flex flex-between"><div class="card-title">Work</div><img src="./images/icon-ellipsis.svg" alt=""></div>
-          <h1 class="card-time">32hrs</h1>
-          <p class="card-desc">Last Week - 36hrs</p>
-        </div>
-      </div>
-
-      <div class="card" id="card-work">
-        <div class="img">
-          <img src="./images/icon-work.svg" alt="">
-        </div>
-        <div class="card-body">
-          <div class="flex flex-between"><div class="card-title">Work</div><img src="./images/icon-ellipsis.svg" alt=""></div>
-          <h1 class="card-time">32hrs</h1>
-          <p class="card-desc">Last Week - 36hrs</p>
-        </div>
-      </div>
-
-      <div class="card" id="card-work">
-        <div class="img">
-          <img src="./images/icon-work.svg" alt="">
-        </div>
-        <div class="card-body">
-          <div class="flex flex-between"><div class="card-title">Work</div><img src="./images/icon-ellipsis.svg" alt=""></div>
-          <h1 class="card-time">32hrs</h1>
-          <p class="card-desc">Last Week - 36hrs</p>
-        </div>
-      </div>
-
-      <div class="card" id="card-work">
-        <div class="img">
-          <img src="./images/icon-work.svg" alt="">
-        </div>
-        <div class="card-body">
-          <div class="flex flex-between"><div class="card-title">Work</div><img src="./images/icon-ellipsis.svg" alt=""></div>
-          <h1 class="card-time">32hrs</h1>
-          <p class="card-desc">Last Week - 36hrs</p>
-        </div>
-      </div>
-
     </div>
 
   </div>
 
-  </body>
 </body>
 </html>
