--- a/index.html
+++ b/index.html
@@ -1,49 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Time tracking dashboard</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
 
-  <link rel="stylesheet" href="./style.css">
+    <title>Frontend Mentor | Time tracking dashboard</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-</head>
-<body>
-  <div class="container">
+    <link rel="stylesheet" href="./style.css" />
 
-    <div class="profile-card">
-      <div class="header">
-          <div class="profile-pic">
-            <img src="./images/image-jeremy.png" alt="">
-          </div>    
-          <p>Report for</p>
-          <h1>Jeremy <br>Robson</h1>
-      </div>
-      <ul class="menu">
-        <li><a href="">Daily</a></li>
-        <li><a href="">Weekly</a></li>
-        <li><a href="">Monthly</a></li>
-      </ul>
-    </div>
-
-    <div class="card-container">
-      <div class="card" id="card-work">
-        <div class="img">
-          <img src="./images/icon-work.svg" alt="">
+    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  </head>
+  <body>
+    <div class="container">
+      <div class="dashboard">
+        <div class="profile-card">
+          <div class="header">
+            <div class="profile-pic">
+              <img src="./images/image-jeremy.png" alt="" />
+            </div>
+            <p>Report for</p>
+            <h1>Jeremy <br />Robson</h1>
+          </div>
+          <ul class="menu">
+            <li><a href="">Daily</a></li>
+            <li><a href="">Weekly</a></li>
+            <li><a href="">Monthly</a></li>
+          </ul>
         </div>
-        <div class="card-body">
-          <div class="flex flex-between card-header"><div class="card-title">Work</div><img src="./images/icon-ellipsis.svg" alt=""></div>
-          <h1 class="card-time">32hrs</h1>
-          <p class="card-desc">Last Week - 36hrs</p>
+
+        <!-- <div class="card-container"> -->
+        <div class="card work" id="card-work">
+          <div class="img">
+            <img src="./images/icon-work.svg" alt="" />
+          </div>
+          <div class="card-body">
+            <div class="flex flex-between card-header">
+              <div class="card-title">Work</div>
+              <img src="./images/icon-ellipsis.svg" alt="" />
+            </div>
+            <h1 class="card-time">32hrs</h1>
+            <p class="card-desc">Last Week - 36hrs</p>
+          </div>
         </div>
+        <div class="card play" id="card-play">
+          <div class="img">
+            <img src="./images/icon-play.svg" alt="" />
+          </div>
+          <div class="card-body">
+            <div class="flex flex-between card-header">
+              <div class="card-title">Play</div>
+              <img src="./images/icon-ellipsis.svg" alt="" />
+            </div>
+            <h1 class="card-time">32hrs</h1>
+            <p class="card-desc">Last Week - 36hrs</p>
+          </div>
+        </div>
+        <div class="card study" id="card-study">
+          <div class="img">
+            <img src="./images/icon-study.svg" alt="" />
+          </div>
+          <div class="card-body">
+            <div class="flex flex-between card-header">
+              <div class="card-title">Study</div>
+              <img src="./images/icon-ellipsis.svg" alt="" />
+            </div>
+            <h1 class="card-time">32hrs</h1>
+            <p class="card-desc">Last Week - 36hrs</p>
+          </div>
+        </div>
+        <div class="card exercise" id="card-excersice">
+          <div class="img">
+            <img src="./images/icon-exercise.svg" alt="" />
+          </div>
+          <div class="card-body">
+            <div class="flex flex-between card-header">
+              <div class="card-title">Exercise</div>
+              <img src="./images/icon-ellipsis.svg" alt="" />
+            </div>
+            <h1 class="card-time">32hrs</h1>
+            <p class="card-desc">Last Week - 36hrs</p>
+          </div>
+        </div>
+        <div class="card social" id="card-social">
+          <div class="img">
+            <img src="./images/icon-social.svg" alt="" />
+          </div>
+          <div class="card-body">
+            <div class="flex flex-between card-header">
+              <div class="card-title">Social</div>
+              <img src="./images/icon-ellipsis.svg" alt="" />
+            </div>
+            <h1 class="card-time">32hrs</h1>
+            <p class="card-desc">Last Week - 36hrs</p>
+          </div>
+        </div>
+        <div class="card self" id="card-self">
+          <div class="img">
+            <img src="./images/icon-self-care.svg" alt="" />
+          </div>
+          <div class="card-body">
+            <div class="flex flex-between card-header">
+              <div class="card-title">Self Care</div>
+              <img src="./images/icon-ellipsis.svg" alt="" />
+            </div>
+            <h1 class="card-time">32hrs</h1>
+            <p class="card-desc">Last Week - 36hrs</p>
+          </div>
+        </div>
+        <!-- </div> -->
       </div>
     </div>
-
-  </div>
-
-</body>
+  </body>
 </html>
