--- a/index.html
+++ b/index.html
@@ -24,10 +24,12 @@
         <div class="profile-card">
           <div class="header">
             <div class="profile-pic">
-              <img src="./images/image-jeremy.png" alt="" />
+              <img src="./images/image-jeremy.png" alt="" id="dp" />
             </div>
-            <p>Report for</p>
-            <h1>Jeremy <br />Robson</h1>
+            <div class="" id="test">
+              <p>Report for</p>
+              <h1 class="profile-name">Jeremy Robson</h1>
+            </div>
           </div>
           <ul class="menu">
             <li><a href="">Daily</a></li>
@@ -36,86 +38,101 @@
           </ul>
         </div>
 
-        <!-- <div class="card-container"> -->
-        <div class="card work" id="card-work">
-          <div class="img">
+        <div class="card" id="card-work">
+          <div class="card-img">
             <img src="./images/icon-work.svg" alt="" />
           </div>
           <div class="card-body">
-            <div class="flex flex-between card-header">
-              <div class="card-title">Work</div>
+            <div class="flex-between card-header">
+              <p class="card-title">Work</p>
               <img src="./images/icon-ellipsis.svg" alt="" />
             </div>
-            <h1 class="card-time">32hrs</h1>
-            <p class="card-desc">Last Week - 36hrs</p>
+            <div class="wrapper">
+              <h2 class="card-time">32hrs</h2>
+              <p class="card-desc">Last Week - 36hrs</p>
+            </div>
           </div>
         </div>
-        <div class="card play" id="card-play">
-          <div class="img">
+
+        <div class="card" id="card-play">
+          <div class="card-img">
             <img src="./images/icon-play.svg" alt="" />
           </div>
           <div class="card-body">
-            <div class="flex flex-between card-header">
-              <div class="card-title">Play</div>
+            <div class="flex-between card-header">
+              <p class="card-title">Play</p>
               <img src="./images/icon-ellipsis.svg" alt="" />
             </div>
-            <h1 class="card-time">32hrs</h1>
-            <p class="card-desc">Last Week - 36hrs</p>
+            <div class="wrapper">
+              <h2 class="card-time">32hrs</h2>
+              <p class="card-desc">Last Week - 36hrs</p>
+            </div>
           </div>
         </div>
-        <div class="card study" id="card-study">
-          <div class="img">
+
+        <div class="card" id="card-study">
+          <div class="card-img">
             <img src="./images/icon-study.svg" alt="" />
           </div>
           <div class="card-body">
-            <div class="flex flex-between card-header">
-              <div class="card-title">Study</div>
+            <div class="flex-between card-header">
+              <p class="card-title">Study</p>
               <img src="./images/icon-ellipsis.svg" alt="" />
             </div>
-            <h1 class="card-time">32hrs</h1>
-            <p class="card-desc">Last Week - 36hrs</p>
+            <div class="wrapper">
+              <h2 class="card-time">32hrs</h2>
+              <p class="card-desc">Last Week - 36hrs</p>
+            </div>
           </div>
         </div>
-        <div class="card exercise" id="card-excersice">
-          <div class="img">
+
+        <div class="card" id="card-exercise">
+          <div class="card-img">
             <img src="./images/icon-exercise.svg" alt="" />
           </div>
           <div class="card-body">
-            <div class="flex flex-between card-header">
-              <div class="card-title">Exercise</div>
+            <div class="flex-between card-header">
+              <p class="card-title">Exercise</p>
               <img src="./images/icon-ellipsis.svg" alt="" />
             </div>
-            <h1 class="card-time">32hrs</h1>
-            <p class="card-desc">Last Week - 36hrs</p>
+            <div class="wrapper">
+              <h2 class="card-time">32hrs</h2>
+              <p class="card-desc">Last Week - 36hrs</p>
+            </div>
           </div>
         </div>
-        <div class="card social" id="card-social">
-          <div class="img">
+
+        <div class="card" id="card-social">
+          <div class="card-img">
             <img src="./images/icon-social.svg" alt="" />
           </div>
           <div class="card-body">
-            <div class="flex flex-between card-header">
-              <div class="card-title">Social</div>
+            <div class="flex-between card-header">
+              <p class="card-title">Social</p>
               <img src="./images/icon-ellipsis.svg" alt="" />
             </div>
-            <h1 class="card-time">32hrs</h1>
-            <p class="card-desc">Last Week - 36hrs</p>
+            <div class="wrapper">
+              <h2 class="card-time">32hrs</h2>
+              <p class="card-desc">Last Week - 36hrs</p>
+            </div>
           </div>
         </div>
-        <div class="card self" id="card-self">
-          <div class="img">
+
+        <div class="card" id="card-self">
+          <div class="card-img">
             <img src="./images/icon-self-care.svg" alt="" />
           </div>
           <div class="card-body">
-            <div class="flex flex-between card-header">
-              <div class="card-title">Self Care</div>
+            <div class="flex-between card-header">
+              <p class="card-title">Self Care</p>
               <img src="./images/icon-ellipsis.svg" alt="" />
             </div>
-            <h1 class="card-time">32hrs</h1>
-            <p class="card-desc">Last Week - 36hrs</p>
+            <div class="wrapper">
+              <h2 class="card-time">32hrs</h2>
+              <p class="card-desc">Last Week - 36hrs</p>
+            </div>
           </div>
         </div>
-        <!-- </div> -->
       </div>
     </div>
   </body>
