--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
             </div>
           </div>
           <ul class="menu">
-            <li><a href="">Daily</a></li>
-            <li><a href="">Weekly</a></li>
-            <li><a href="">Monthly</a></li>
+            <li><span class="nav-link">Daily</span></li>
+            <li><span class="nav-link">Weekly</span></li>
+            <li><span class="nav-link">Monthly</span></li>
           </ul>
         </div>
 
@@ -48,8 +48,8 @@
               <img src="./images/icon-ellipsis.svg" alt="" />
             </div>
             <div class="wrapper">
-              <h2 class="card-time">32hrs</h2>
-              <p class="card-desc">Last Week - 36hrs</p>
+              <h2 class="card-time"><span id="work">32</span>hrs</h2>
+              <p class="card-desc">Last Week - <span id="workPre">36</span>hrs</p>
             </div>
           </div>
         </div>
@@ -64,8 +64,8 @@
               <img src="./images/icon-ellipsis.svg" alt="" />
             </div>
             <div class="wrapper">
-              <h2 class="card-time">32hrs</h2>
-              <p class="card-desc">Last Week - 36hrs</p>
+              <h2 class="card-time"><span id="play">32</span>hrs</h2>
+              <p class="card-desc">Last Week - <span id="playPre">36</span>hrs</p>
             </div>
           </div>
         </div>
@@ -80,8 +80,8 @@
               <img src="./images/icon-ellipsis.svg" alt="" />
             </div>
             <div class="wrapper">
-              <h2 class="card-time">32hrs</h2>
-              <p class="card-desc">Last Week - 36hrs</p>
+              <h2 class="card-time"><span id="study">32</span>hrs</h2>
+              <p class="card-desc">Last Week - <span id="studyPre">36</span>hrs</p>
             </div>
           </div>
         </div>
@@ -96,8 +96,8 @@
               <img src="./images/icon-ellipsis.svg" alt="" />
             </div>
             <div class="wrapper">
-              <h2 class="card-time">32hrs</h2>
-              <p class="card-desc">Last Week - 36hrs</p>
+              <h2 class="card-time"><span id="exercise">32</span>hrs</h2>
+              <p class="card-desc">Last Week - <span id="exercisePre">36</span>hrs</p>
             </div>
           </div>
         </div>
@@ -112,8 +112,8 @@
               <img src="./images/icon-ellipsis.svg" alt="" />
             </div>
             <div class="wrapper">
-              <h2 class="card-time">32hrs</h2>
-              <p class="card-desc">Last Week - 36hrs</p>
+              <h2 class="card-time"><span id="social">32</span>hrs</h2>
+              <p class="card-desc">Last Week - <span id="socialPre">36</span>hrs</p>
             </div>
           </div>
         </div>
@@ -128,8 +128,8 @@
               <img src="./images/icon-ellipsis.svg" alt="" />
             </div>
             <div class="wrapper">
-              <h2 class="card-time">32hrs</h2>
-              <p class="card-desc">Last Week - 36hrs</p>
+              <h2 class="card-time"><span id="self care">32</span>hrs</h2>
+              <p class="card-desc">Last Week - <span id="selfPre">36</span>hrs</p>
             </div>
           </div>
         </div>
