--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
               <h1 class="profile-name">Jeremy Robson</h1>
             </div>
           </div>
-          <ul class="menu">
-            <li><span class="nav-link">Daily</span></li>
-            <li><span class="nav-link">Weekly</span></li>
+          <ul class="menu" id="navList">
+            <li><span class="nav-link ">Daily</span></li>
+            <li><span class="nav-link active">Weekly</span></li>
             <li><span class="nav-link">Monthly</span></li>
           </ul>
         </div>
