--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
               <img src="./images/icon-ellipsis.svg" alt="" />
             </div>
             <div class="wrapper">
-              <h2 class="card-time"><span id="self care">32</span>hrs</h2>
+              <h2 class="card-time"><span id="self">32</span>hrs</h2>
               <p class="card-desc">Last Week - <span id="selfPre">36</span>hrs</p>
             </div>
           </div>
