--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </div>
             <div class="wrapper">
               <h2 class="card-time"><span id="work">32</span>hrs</h2>
-              <p class="card-desc">Last Week - <span id="workPre">36</span>hrs</p>
+              <p class="card-desc">Last <span id="workDuration">Week</span> - <span id="workPre">36</span> hrs</p>
             </div>
           </div>
         </div>
@@ -65,7 +65,7 @@
             </div>
             <div class="wrapper">
               <h2 class="card-time"><span id="play">32</span>hrs</h2>
-              <p class="card-desc">Last Week - <span id="playPre">36</span>hrs</p>
+              <p class="card-desc">Last <span id="playDuration">Week</span> - <span id="playPre">36</span> hrs</p>
             </div>
           </div>
         </div>
@@ -81,7 +81,7 @@
             </div>
             <div class="wrapper">
               <h2 class="card-time"><span id="study">32</span>hrs</h2>
-              <p class="card-desc">Last Week - <span id="studyPre">36</span>hrs</p>
+              <p class="card-desc">Last <span id="studyDuration">Week</span> - <span id="studyPre">36</span> hrs</p>
             </div>
           </div>
         </div>
@@ -97,7 +97,7 @@
             </div>
             <div class="wrapper">
               <h2 class="card-time"><span id="exercise">32</span>hrs</h2>
-              <p class="card-desc">Last Week - <span id="exercisePre">36</span>hrs</p>
+              <p class="card-desc">Last <span id="exerciseDuration">Week</span> - <span id="exercisePre">36</span> hrs</p>
             </div>
           </div>
         </div>
@@ -113,7 +113,7 @@
             </div>
             <div class="wrapper">
               <h2 class="card-time"><span id="social">32</span>hrs</h2>
-              <p class="card-desc">Last Week - <span id="socialPre">36</span>hrs</p>
+              <p class="card-desc">Last <span id="socialDuration">Week</span> - <span id="socialPre">36</span> hrs</p>
             </div>
           </div>
         </div>
@@ -129,7 +129,7 @@
             </div>
             <div class="wrapper">
               <h2 class="card-time"><span id="self">32</span>hrs</h2>
-              <p class="card-desc">Last Week - <span id="selfPre">36</span>hrs</p>
+              <p class="card-desc">Last <span id="selfDuration">Week</span> - <span id="selfPre">36</span> hrs</p>
             </div>
           </div>
         </div>
